force-app/main/default/objects/SMS_DataArchive_Days__c/SMS_DataArchive_Days__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>SMS DataArchive Days</label>
</CustomObject>