force-app/main/default/objects/SMS_DataArchive_Days__c/fields/Archive_Days__c.field-meta.xml
<CustomField>
    <fullName>Archive_Days__c</fullName>
    <label>Archive Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>