force-app/main/default/objects/SMS_DataArchive_Days__c/fields/Retry_Days__c.field-meta.xml
<CustomField>
    <fullName>Retry_Days__c</fullName>
    <label>Retry Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>