force-app/main/default/objects/SMS_DataArchive_Days__c/fields/Retry_Times__c.field-meta.xml
<CustomField>
    <fullName>Retry_Times__c</fullName>
    <description>No of times the archiving should be retried</description>
    <label>Retry Times</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>